--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "album",
     "picture"
   ],
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "",
   "private": false,
   "scripts": {},
   "author": "joel.ou",
+  "mail": "8019893@qq.com",
   "license": "MIT",
+  "homepage": "https://github.com/joel-ou/APopups-Gallery",
+  "bugs": "https://github.com/joel-ou/APopups-Gallery/issues",
   "devDependencies": {},
   "dependencies": {
     "hammerjs": "^2.0.8"
